# OFIS

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  build_exe.bat  pyproject.toml  requirements.txt
docs/: REGISTRATION.md  RUN_WINDOWS.md  WORKFLOW.md
docs/spec/: ARCHIVE_SYSTEM.md  COMPANY_MANAGER.md  DATABASE.md  DEVELOPMENT_ROADMAP.md  ERROR_HANDLING.md  FIELD_MAPPING.md  OCR_ENGINE.md  PDF_ENGINE.md  PROJECT_REQUIREMENTS.md  README.md  SETTINGS.md  SYSTEM_ARCHITECTURE.md  TESTING.md  UI_UX.md  WINDOWS.md
resources/fonts/: README.md
resources/i18n/: en.json  ru.json  uz.json
resources/qss/: dark.qss  light.qss
scripts/: build_svera_mapping.py  calibrate_mvd.py  calibrate_registration.py
src/: app.py
src/ai/: base.py  fake_provider.py  gemini_provider.py  manager.py  prompts.py
src/common/: di.py  errors.py  logging.py  result.py  threading.py
src/config/: constants.py  paths.py  settings_service.py
src/controllers/: process_controller.py  registration_controller.py  svera_controller.py
src/database/: connection.py
src/domain/: company.py  documents.py  employee.py  enums.py  ocr.py  profession.py  registration_address.py
src/ocr/: preprocess.py  service.py  translit.py
src/pdf/: calibrate.py  engine.py  formatters.py  mapping.py  renderers.py
src/services/: batch_service.py  company_service.py  field_extractor.py  generation_service.py  manual_entry.py  profession_service.py  registration_address_service.py  registration_service.py  registration_values.py  svera_service.py  svera_values.py
src/ui/: i18n.py  theme.py  (+1 more)
(+38 files in other folders)
