[project]
name = "ofis"
version = "0.1.0"
description = "HR Document Automation System Pro — enterprise Windows desktop app that fills employment document templates from AI-read documents."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "PySide6>=6.7",
    "pydantic>=2.7",
    "PyMuPDF>=1.24",
    "opencv-python-headless>=4.9",
    "Pillow>=10.3",
    "python-dotenv>=1.0",
    "google-generativeai>=0.7",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]
build = ["pyinstaller>=6.8"]

[project.scripts]
ofis = "src.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TID"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
qt_api = "pyside6"
